<resources>
    <string name="app_name">Todolist</string>
    <string name="my_tasks">My Tasks</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="cancel">Cancel</string>
    <string name="task_title">Task title</string>
    <string name="more_details">More details</string>
    <string name="deadline_date">Deadline date</string>
    <string name="deadline_time">Deadline time</string>
    <string name="remind_me">Remind me?</string>
    <string name="date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="tags">Tags</string>
    <string name="edit_task">Edit Task</string>
</resources>