<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/newTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_text_background"
        android:text="@string/edit_task"
        android:textColor="@android:color/black"
        android:textColorLink="@color/gray"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newTask"
            android:ems="10"
            android:inputType="textPersonName"

            android:text="@string/task_title"
            android:textAlignment="center"
            android:textColorLink="@color/gray"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/taskDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskTitle"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/more_details"
            android:textAlignment="center"
            android:textColorLink="@color/gray" />

        <EditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskDetails"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/tags"
            android:textAlignment="center"
            android:textColorLink="@color/gray"  />

        <EditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskDetails"
            android:ems="10"
            android:inputType="date"
            android:minHeight="48dp"
            android:text="@string/deadline_date"
            android:textAlignment="center"
            android:textColorLink="@color/gray" />

        <EditText
            android:id="@+id/taskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskDate"
            android:ems="10"
            android:inputType="time"
            android:minHeight="48dp"
            android:text="@string/deadline_time"
            android:textAlignment="center"
            android:textColorLink="@color/gray" />

        <CheckBox
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/taskTime"
            android:layout_centerHorizontal="true"
            android:buttonTint="@android:color/holo_green_dark"
            android:paddingStart="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="Remind me?" />


        <EditText
            android:id="@+id/reminderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder"
            android:ems="10"
            android:inputType="date"
            android:minHeight="48dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColorLink="@color/gray" />

        <EditText
            android:id="@+id/reminderTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminderDate"
            android:ems="10"
            android:inputType="time"
            android:minHeight="48dp"
            android:text="@string/reminder_time"
            android:textAlignment="center"
            android:textColorLink="@color/gray" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_below="@id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="90dp"

        android:background="@color/gray"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:textColorLink="@color/gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_below="@id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="90dp"
        android:background="@color/gray"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textColorLink="@color/gray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>